[project]
name = "ct-agent"
version = "0.1.0"
description = "Copy trading agent for telegram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.workspace]
members = [
     "modules/CT-agent-broker-ex-module",
     "modules/CT-agent-nlp-parser-module",
     "modules/CT-agent-tg-bot-module",
     "shared",
]
