[project]
name = "shared"
version = "0.1.0"
description = "The core directory of CT agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
